# images-pipeline

./: .gitignore  .pre-commit-config.yaml  DEPRECATION_NOTICE.md  Dockerfile  Makefile  README-project.md  README.md  asyncio.py  asyncio_example.py  main.py  minimal-ray-glue-template.py  multiprocess.py  multithreads.py  pyproject.toml  serial.py
.github/workflows/: ci.yml
src/: async-images-processing.py  core.py  multiprocess-images-processing.py  multithread-images-processing.py  ray-images-processing.py  serial-images-processing.py
src/images_pipeline/: __init__.py  main.py  module1.py  process_images.py
src/images_pipeline/core/: __init__.py  error_handling.py  exceptions.py  factories.py  image_utils.py  image_utils.pyi  logging_config.py  models.py  observability.py  protocols.py  services.py
src/images_pipeline/processors/: __init__.py  asyncio_processor.py  common.py  multiprocess.py  multithread.py  serial.py
src/images_pipeline/testing/: __init__.py  fakes.py
tests/: __init__.py  test_exceptions.py  test_image_utils.py  test_logging_config.py  test_main.py  test_models.py  test_module1.py  test_processors.py  test_serial_processor.py
tests/core/: test_error_handling.py
tests/integration/: test_pipeline.py
tests/unit/: test_fakes.py  test_services.py
