[project]
name = "images_pipeline"
version = "0.1.0"
description = "A modern Python project for image processing pipeline."
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]

[project.scripts]
cli = "images_pipeline.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pyright>=1.1.389",
    "ruff>=0.9.3",
    "pre-commit>=4.0.1",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
include = ["src"]
ignore = ["asyncio_example.py", "serial.py"]

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
